Changes for 2.1.0

New features:
A......... [ZBXNEXT-1492] dropped support of output shorten for the API get methods (Pavels)
.......PS. [ZBXNEXT-1410] increased performance of operation with historical and configuration caches (Sasha)
........S. [ZBXNEXT-1304] added resolving of LLD macros in an item prototype and a trigger prototype descriptions (Sasha)
....I...S. [ZBXNEXT-1472] added support of parallel processing of time-based functions (Sasha)
..F....... [ZBXNEXT-1323] implemented macros in script confirmation text (Eduard)
.......PS. [ZBX-3449] added support of multiple dynamic SNMP indexes (Sasha)
..F....... [ZBXNEXT-1441] added media type name to action operations description (Vedmak)
A.F.I...S. [ZBXNEXT-1186] increased length to 2048 characters of expression field for triggers (Sasha)
..F....... [ZBXNEXT-1433] moved operation delay field to Operation tab (Eduard)
..F.I..PS. [ZBXNEXT-1322] automatic update of database structure when upgrading to newer version (Sasha, Vedmak)
..F.....S. [ZBX-3236] added support of value mapping for a character data (Sasha, Vedmak)
.......P.. [ZBX-3817] improved performance of the "data sender" process (Sasha)
.......PS. [ZBX-5436] added support of AllowRoot paramater by server and proxy daemons (Sasha)
..F....... [ZBX-5180] maintenance periods form redesign (Vedmak)
.......PS. [ZBXNEXT-1335] pingers work without connection to a database (Sasha)
..F....... [ZBX-5127] regular expressions form redesign (Vedmak)

Bug fixes:
A......... [ZBX-5752] fixed incorrect API results, when deleted template objects (Oleg)
A......... [ZBX-5709] fixed trigger recreation after template trigger expression change causing event history deletion (Toms)
..F....... [ZBX-5711] added caching for frontend favorite values (Toms)
..F....... [ZBX-5711] removed redundant queries when editing web scenario (Toms)
A.F....... [ZBX-5565] fixed html is returned on api requests if db is down (Vedmak)