@@ -1,6 +1,7 @@
 Changes for 2.1.0
 
 New features:
+A.F....... [ZBXNEXT-887] fixed permission calculation (Eduard)
 A......... [ZBXNEXT-1492] dropped support of output shorten for the API get methods (Pavels)
 .......PS. [ZBXNEXT-1410] increased performance of operation with historical and configuration caches (Sasha)
 ........S. [ZBXNEXT-1304] added resolving of LLD macros in an item prototype and a trigger prototype descriptions (Sasha)
@@ -58,6 +59,7 @@ A.F....... [ZBXNEXT-1447] added initial Finnish translation (Richlv)
 ........S. [ZBX-5525] renamed macro {TRIGGER.COMMENT} to {TRIGGER.DESCRIPTION} (Sasha)
 
 Bug fixes:
+A......... [ZBX-5737] fixed image saving using Oracle (Eduard)
 ..F....... [ZBX-5639] fixed global options "dropdown first entry" and "remember selected" in availability reports (Oleg)
 ..F....... [ZBX-5639] improved sdii() debugging function (Toms)
 A.F.....S. [ZBX-5816] fixed undefined index in Monitoring > Events, when favorite trigger has been deleted (Toms, Sasha)
